// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button matches the snapshot as a button 1`] = `
<button
  className="nhsuk-button"
  href={false}
>
  Primary
</button>
`;

exports[`Button matches the snapshot as a button 2`] = `
<button
  className="nhsuk-button nhsuk-button--secondary"
  href={false}
>
  Secondary
</button>
`;

exports[`Button matches the snapshot as a button 3`] = `
<button
  className="nhsuk-button nhsuk-button--reverse"
  href={false}
>
  Reverse
</button>
`;

exports[`Button matches the snapshot as a link 1`] = `
<a
  className="nhsuk-button"
  href="/"
>
  Primary
</a>
`;

exports[`Button matches the snapshot as a link 2`] = `
<a
  className="nhsuk-button nhsuk-button--secondary"
  href="/"
>
  Secondary
</a>
`;

exports[`Button matches the snapshot as a link 3`] = `
<a
  className="nhsuk-button nhsuk-button--reverse"
  href="/"
>
  Reverse
</a>
`;
